--- a/src/app/components/folder/folder.component.css
+++ b/src/app/components/folder/folder.component.css
@@ -16,6 +16,7 @@ body{
     height: 100vh;
   }
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);    
+@import url(https://fonts.googleapis.com/css?family=Marcellus+SC);
 
 
 
@@ -32,8 +33,13 @@ body{
 }
 
 #paragraph{
-    font-size: 15px;
   
+      font-family: "Marcellus SC", serif;
+      text-transform: capitalize;
+      text-align: center;
+      font-size: 30px;
+      color: #fff;
+      text-shadow: rgb(7, 49, 13) 2px 2px 2px;
 }
 #alert{
     color:#a22;
