--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -27,7 +27,7 @@ body {
 .form {
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
+  background: rgb(70, 64, 47);
   max-width: 360px;
   margin: 100px auto;
   padding: 45px;
@@ -128,7 +128,7 @@ select {
 
 .alert {
   font-size: 10px;
-  color: #953;
+  color: #f00;
   padding: 0;
   margin: 0;
   margin-top: 0;
@@ -142,6 +142,7 @@ select {
 .register-form {
   overflow-y: scroll;
   overflow-x: hidden;
+  padding-right: 20px;;
   height: 500px;
   width: 300px;
   margin-right: 150px;
